--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.11.2",
+    "@material-ui/core": "^4.11.0",
     "@zeit/next-css": "^1.0.1",
     "airtable": "^0.10.0",
     "isomorphic-unfetch": "^3.1.0",
